--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,14 @@ subprojects{
             properties['sonar.sources'] = sourceSets.main.java.srcDirs.findAll { it.exists() && !it.path.contains('resources') } ?: []
         }
     }
+    
+    //Force transitive dependency versions
+    //jackson - pulled in by jjwt, was 2.9.6, vulnerability update to 2.9.8
+    configurations.all {
+        resolutionStrategy {
+            force 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+        }
+    }
 
     //Apply module naming to all projects
     //Add LICENSE so it is included in all JARs, as well as dependent licenses, fulfilling the "distributions include license" requirement
